# fastapi_backend_template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  compose.dev.yml  compose.yml  log.default.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_31_1625-1a3efbf3fdbb_.py
app/: main.py
app/core/: cli.py  config.py  db.py  deps.py  routes.py  schemas.py
app/core/logging/: __init__.py  config.py
auth/: cli.py  deps.py  models.py  routes.py  schemas.py
auth/email-templates/src/: new_account.mjml
